@@ -99,7 +99,9 @@ typedef struct _LDR_DDAG_NODE32
     ULONG LowestLink;
 } LDR_DDAG_NODE32, *PLDR_DDAG_NODE32;
 
-#define LDR_DATA_TABLE_ENTRY_SIZE_WINXP32 FIELD_OFFSET(LDR_DATA_TABLE_ENTRY32, DdagNode)
+#define LDR_DATA_TABLE_ENTRY_SIZE_WINXP_32 FIELD_OFFSET(LDR_DATA_TABLE_ENTRY32, DdagNode)
+#define LDR_DATA_TABLE_ENTRY_SIZE_WIN7_32 FIELD_OFFSET(LDR_DATA_TABLE_ENTRY32, BaseNameHashValue)
+#define LDR_DATA_TABLE_ENTRY_SIZE_WIN8_32 FIELD_OFFSET(LDR_DATA_TABLE_ENTRY32, ImplicitPathOptions)
 
 typedef struct _LDR_DATA_TABLE_ENTRY32
 {
@@ -154,10 +156,11 @@ typedef struct _LDR_DATA_TABLE_ENTRY32
     LIST_ENTRY32 HashLinks;
     ULONG TimeDateStamp;
     WOW64_POINTER(struct _ACTIVATION_CONTEXT *) EntryPointActivationContext;
-    WOW64_POINTER(PVOID) PatchInformation;
+    WOW64_POINTER(PVOID) Spare;
     WOW64_POINTER(PLDR_DDAG_NODE) DdagNode;
     LIST_ENTRY32 NodeModuleLink;
     WOW64_POINTER(struct _LDRP_DLL_SNAP_CONTEXT *) SnapContext;
+    WOW64_POINTER(PVOID) ParentDllBase;
     WOW64_POINTER(PVOID) SwitchBackContext;
     RTL_BALANCED_NODE32 BaseAddressIndexNode;
     RTL_BALANCED_NODE32 MappingInfoIndexNode;
@@ -165,6 +168,7 @@ typedef struct _LDR_DATA_TABLE_ENTRY32
     LARGE_INTEGER LoadTime;
     ULONG BaseNameHashValue;
     LDR_DLL_LOAD_REASON LoadReason;
+    ULONG ImplicitPathOptions;
 } LDR_DATA_TABLE_ENTRY32, *PLDR_DATA_TABLE_ENTRY32;
 
 typedef struct _CURDIR32
